publicSecurity.tf
resource "aws_security_group" "PublicSecurity" {
  name        = "PublicSecurity"
  description = "Allow TLS inbound traffic"
  vpc_id      = module.MainNetwork.vpc_id 
  ingress {
    description      = "Allow SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.name}-allow_SSH"
  }
}
